fix incorrect login route in documentation

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -75,6 +75,13 @@
         <td>A JSON object holding all breeds with specified class.</td>
       </tr>
       <tr>
+        <td>Allow user to Login</td>
+        <td>/login</td>
+        <td>POST</td>
+        <td>A JSON object holding "email" and "password" fields.</td>
+        <td>A JSON object holding users information and JWT bearer token.</td>
+      </tr>
+      <tr>
         <td>Allow a new user to register</td>
         <td>/users</td>
         <td>POST</td>
@@ -87,13 +94,6 @@
           }
         </td>
         <td>A JSON object holding the new users information.</td>
-      </tr>
-      <tr>
-        <td>Allow user to Login</td>
-        <td>/users</td>
-        <td>POST</td>
-        <td>A JSON object holding "email" and "password" fields.</td>
-        <td>A JSON object holding users information and JWT bearer token.</td>
       </tr>
       <tr>
         <td>Allow user to update their user info</td>
