change add user favorites to use breed id instead of breed name.

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -114,7 +114,7 @@
       </tr>
       <tr>
         <td>Allow user to add breeds to their favorites list</td>
-        <td>/users/favorites/[breedName]</td>
+        <td>/users/favorites/[breedId]</td>
         <td>POST</td>
         <td>Header with authorized users JWT bearer token.</td>
         <td>A JSON object with information on all breeds in users updated favorites list.</td>
